--- a/Event_Management_System/Event_Management_System.csproj
+++ b/Event_Management_System/Event_Management_System.csproj
@@ -52,6 +52,9 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -69,6 +72,12 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="zxing, Version=0.16.9.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZXing.Net.0.16.9\lib\net48\zxing.dll</HintPath>
+    </Reference>
+    <Reference Include="zxing.presentation, Version=0.16.9.0, Culture=neutral, PublicKeyToken=4e88037ac681fe60, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZXing.Net.0.16.9\lib\net48\zxing.presentation.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -113,8 +122,16 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\deshboard\bootstrap.min.css" />
+    <Content Include="Content\deshboard\bootstrap_ModalPopUp.min.css" />
+    <Content Include="Content\deshboard\font-awesome.min.css" />
+    <Content Include="Content\deshboard\main.css" />
+    <Content Include="Content\Login\loboEMS.jpeg" />
+    <Content Include="Content\Login\Login.css" />
+    <Content Include="Content\Login\OIP.jpeg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage2.html" />
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -131,11 +148,15 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="HtmlPage1.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\TicketController.cs" />
+    <Compile Include="Models\bookinginfo.cs" />
     <Compile Include="Models\BookingInfo_tbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -143,9 +164,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Branch_Tbl.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\College_Tbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\BookingInfoController.cs" />
@@ -160,6 +178,9 @@
     <Compile Include="Controllers\SemesterController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\YearController.cs" />
+    <Compile Include="Models\College_Tbl.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\EventLocationMaster_Tbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -192,10 +213,15 @@
     <Compile Include="Models\EventCollegeVM.cs" />
     <Compile Include="Models\EventVM.cs" />
     <Compile Include="Models\EvtLocationCollegeVM.cs" />
+    <Compile Include="Models\QRCodeGenerator.cs" />
     <Compile Include="Models\Seat.cs" />
     <Compile Include="Models\SeatEvtLocVM.cs" />
     <Compile Include="Models\States.cs" />
     <Compile Include="Models\StudentVM.cs" />
+    <Compile Include="Models\Student_tbl.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Ticket.cs" />
     <Compile Include="Models\Year.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Seat_tbl.cs">
@@ -205,9 +231,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\State_List.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Student_tbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Year_Tbl.cs">
@@ -284,6 +307,8 @@
     <Content Include="Views\Shared\_Master.cshtml" />
     <Content Include="Views\LoginPage\Login.cshtml" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Ticket\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
