--- a/Event_Management_System/packages.config
+++ b/Event_Management_System/packages.config
@@ -7,4 +7,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
