--- a/Event_Management_System/packages.config
+++ b/Event_Management_System/packages.config
@@ -1,12 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net48" />
   <package id="bootstrap" version="5.3.3" targetFramework="net481" />
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
+  <package id="MailKit" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
+  <package id="MimeKit" version="4.8.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="Unity" version="5.11.1" targetFramework="net48" />
+  <package id="Unity.Abstractions" version="5.11.1" targetFramework="net48" />
+  <package id="Unity.Container" version="5.11.1" targetFramework="net48" />
+  <package id="Unity.Mvc" version="5.11.1" targetFramework="net48" />
+  <package id="Unity.Mvc5" version="1.4.0" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net48" />
   <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
 </packages>
