DB1 folder Added

--- a/Event_Management_System/Event_Management_System.csproj
+++ b/Event_Management_System/Event_Management_System.csproj
@@ -342,6 +342,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="DB1\Event_Management_System.bak" />
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
